Completes the styling for the quote generator

--- a/-- template/index.html
+++ b/-- template/index.html
@@ -9,6 +9,9 @@
     <title>Template</title>
 </head>
 <body>
+    <h1>Project Starter</h1>
+
+
     <!-- Script -->
     <script src="script.js"></script>
 </body>
