--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -13,11 +13,11 @@
         <!-- Quote Element -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Successful investing takes time, discipline and patience.</span>
+            <span id="quote"></span>
         </div>
         <!-- Author Element -->
         <div class="quote-author">
-            <span id="author">Warren Buffett</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
@@ -27,7 +27,8 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
-
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
 
     <!-- Script -->
     <script src="script.js"></script>
