Completes the infinite scrolling project

--- a/infinite-scroll/index.html
+++ b/infinite-scroll/index.html
@@ -13,7 +13,7 @@
     <h1>UNSPLASH API - INFINITE SCROLL</h1>
 
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader" >
         <img src="./assets/loading-animation.svg" alt="Loading">
     </div>
 
