Completes the robo-joke project and updates readme

--- a/robo-jokes/index.html
+++ b/robo-jokes/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="https://img.icons8.com/doodle/48/000000/lol--v1.png">
+    <link rel="icon" type="image/png" href="https://img.icons8.com/carbon-copy/100/000000/broken-robot.png">
     <link rel="stylesheet" href="style.css">
     <title>Robo-jokes</title>
 </head>
 <body>
     <div class="container">
         <button id="button">Tell me a joke</button>
-        <audio src="" id="audio" controls></audio>
+        <audio src="" id="audio" controls hidden></audio>
         <img src="./assets/robot.gif" alt="Robot comedian">
     </div>
     <!-- Script -->
