--- a/animated-navigation/index.html
+++ b/animated-navigation/index.html
@@ -4,16 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animated Navigation</title>
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="https://img.icons8.com/carbon-copy/100/000000/menu.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Menu Overlay -->
+  <div class="overlay" id="overlay"></div>
+      <!-- Menu Items -->
+      <nav>
+        <ul>
+          <li id="nav-1"><a href="#home">Home</a></li>
+          <li id="nav-2"><a href="#about">About</a></li>
+          <li id="nav-3"><a href="#skills">Skills</a></li>
+          <li id="nav-4"><a href="#projects">Projects</a></li>
+          <li id="nav-5"><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
   <!-- Sections -->
-  <section id="home"><a href="https://jacinto.design" target="_blank">Jacinto Design</a></section>
+  <section id="home"><a href="#" target="_blank">TnT DnD</a></section>
   <section id="about"><h1>Learn More About Me</h1></section>
-  <section id="skills"><h1>These Are My Strengths</h1></section>
-  <section id="projects"><h1>These Are My Results</h1></section>
-  <section id="contact"><h1>Available Anytime</h1></section>
+  <section id="skills"><h1>Available Anytime</h1></section>
+  <section id="projects"><h1>No really, <span></span> I like work</h1></section>
+  <section id="contact"><h1>Please hire me. <span></span> I'm so bored.</h1></section>
   <!-- Script -->
   <script src="script.js"></script>
 </body>
