--- a/animated-navigation/index.html
+++ b/animated-navigation/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animated Navigation</title>
-  <link rel="icon" type="image/png" href="https://img.icons8.com/carbon-copy/100/000000/menu.png">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Menu Overlay -->
-  <div class="overlay" id="overlay"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Animated Navigation</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://img.icons8.com/carbon-copy/100/000000/menu.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Menu Overlay -->
+    <div class="overlay" id="overlay">
       <!-- Menu Items -->
       <nav>
         <ul>
@@ -20,13 +24,25 @@
           <li id="nav-5"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-  <!-- Sections -->
-  <section id="home"><a href="#" target="_blank">TnT DnD</a></section>
-  <section id="about"><h1>Learn More About Me</h1></section>
-  <section id="skills"><h1>Available Anytime</h1></section>
-  <section id="projects"><h1>No really, <span></span> I like work</h1></section>
-  <section id="contact"><h1>Please hire me. <span></span> I'm so bored.</h1></section>
-  <!-- Script -->
-  <script src="script.js"></script>
-</body>
+      <!-- Hamburger Menu -->
+      <div class="menu-bars" id="menu-bars">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+    </div>
+
+    <!-- Sections -->
+    <section id="home"><a href="#" target="_blank">TnT DnD</a></section>
+    <section id="about"><h1>Learn More About Me</h1></section>
+    <section id="skills"><h1>Available Anytime</h1></section>
+    <section id="projects">
+      <h1>No really, <span></span> I like work</h1>
+    </section>
+    <section id="contact">
+      <h1>Please hire me. <span></span> I'm so bored.</h1>
+    </section>
+    <!-- Script -->
+    <script src="script.js"></script>
+  </body>
 </html>
